Use a sidebar to show media-cards to make sure they don't overflow
This easily makes sure that a card is not displayed outside of the screen (overflow) while improving cross-device compatibility

--- a/resources/assets/style.css
+++ b/resources/assets/style.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 .animated.slideIn {
     animation: slideIn .5s ease;
 }
@@ -7,20 +9,20 @@
 }
 
 @keyframes slideIn {
-    0% {
+    from {
         opacity:   0;
-        transform: translate3d(0, -100%, 0);
+        transform: translate3d(-100%, 0, 0);
     }
 
     to {
-        opacity:   100%;
-        transform: translateZ(0);
+        opacity:   1;
+        transform: translate3d(0, 0, 0);
     }
 }
 
 @keyframes slideOut {
     to {
         opacity:   0;
-        transform: translate3d(0, -100%, 0);
+        transform: translate3d(100%, 0, 0);
     }
 }
